# HigsFrame

./: .gitignore  .mega-linter.yml  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake-multi-platform.yml  cpp-linter.yml  mega-linter.yml
examples/: April2025.cal  ExampleHelper.cxx  ExampleHelper.hh
include/: BasicFrame.h  BasicHelper.h  Calibration.h  CustomMap.h  DataFrameLibrary.h  Globals.h  Options.h  Redirect.h  Singleton.h
src/: .HigsFrame.cxx.swp  BasicFrame.cxx  BasicHelper.cxx  Calibration.cxx  DataFrameLibrary.cxx  HigsFrame.cxx  LinkDef.h
